--- a/a1.html
+++ b/a1.html
@@ -270,6 +270,8 @@
 <script>
 // --- AUTH PROTECTION ---
 // --- AUTH PROTECTION ---
+  
+const API_BASE = "https://eraconnect-1.onrender.com";
 const userEmail = localStorage.getItem("user_email");   // ← lowercase _email
 const userName = localStorage.getItem("user_name");     // ← lowercase _name
 
@@ -431,5 +433,6 @@ function showResults(text) {
 </script>
 </body>
 </html>
+
 
 
