--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </div>
 
 <script>
-    const API = "https://eraconnect.onrender.com";
+    const API = "https://eraconnect-1.onrender.com";
     let selectedHobbies = new Set();
     let userRhythm = "";
     let userHours = "";
@@ -323,3 +323,4 @@
 
 </body>
 </html>
+
